<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/grassgreen"
    tools:context=".RegistrarActivity"
    android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/white_border_rec"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/nombre"
                android:imeOptions="actionNext"
                android:id="@+id/etxnom"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:imeOptions="actionNext"
                android:id="@+id/etxape"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/tele"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:id="@+id/etxtele"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:id="@+id/etxemail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/user"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:id="@+id/etxuser"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:id="@+id/etxpass"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/confirm"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:id="@+id/etxcon"/>
            <Button
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                android:text="@string/guardar"
                android:background="@drawable/button_shape"
                android:id="@+id/btnGuardar"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
