<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PrincipalActivity"
    android:gravity="center"
    android:background="@color/grassgreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/white_border_rec">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bien"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lista"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_shape"
            android:id="@+id/btnlista"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/fav"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_shape"
            android:id="@+id/btnFavoritos"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Mis"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_shape"
            android:id="@+id/btnMisPerros"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/poner"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_shape"
            android:id="@+id/btnponer"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_shape"
            android:id="@+id/btnsalir"/>

    </LinearLayout>

</RelativeLayout>
