<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/pup1"
        android:id="@+id/iviPerro"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameofdog"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:id="@+id/txvNameOfDog"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raceofdog"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:id="@+id/txvRaceOfDog"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageofdog"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:id="@+id/txvAgeOfDog"/>
    </LinearLayout>
</LinearLayout>